Fix background jumping.

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -460,7 +460,7 @@ body {
 
 #event-page {
 	border-bottom: 3px solid rgba(0,0,0, 0.8);
-	background: transparent url(../img/bg/menu1-2040-40.jpg) fixed no-repeat 50% 50%;
+	background: transparent url(../img/bg/menu1-2040-40.jpg) scroll no-repeat 50% 50%;
 	
 	.page-content-inner {
 		width: 100%;
@@ -491,7 +491,7 @@ body {
 
 #circle-page {
 	border-bottom: 3px solid rgba(0,0,0, 0.8);
-	background: transparent url(../img/bg/menu3-2040-40.jpg) fixed no-repeat 50% 50%;
+	background: transparent url(../img/bg/menu3-2040-40.jpg) scroll no-repeat 50% 50%;
 	
 	.page-menu-inner {
 		position: relative;
@@ -544,7 +544,7 @@ body {
 
 #rule-page {
 	border-bottom: 3px solid rgba(0,0,0, 0.8);
-	background: transparent url(../img/bg/menu2-2040-40.jpg) fixed no-repeat 50% 50%;
+	background: transparent url(../img/bg/menu2-2040-40.jpg) scroll no-repeat 50% 50%;
 	
 	.page-menu-inner {
 		position: relative;
